# models/Recipe.js
@@ -1,13 +1,0 @@
-const mongoose = require("mongoose");
-
-const recipeSchema = new mongoose.Schema({
-  title: String,
-  ingredients: [String],
-  instructions: String,
-  image: String,
-  sourceUrl: String,
-});
-
-const Recipe = mongoose.model("Recipe", recipeSchema);
-
-module.exports = Recipe;
